# email-automator

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  config.py  pyproject.toml  sender.py
tests/: test_email.py
