[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-automator"
version = "0.1.0"
description = "A simple Python script to send emails automatically via Gmail."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
email-automator = "email_automator.__main__:main"

[tool.setuptools.packages.find]
where = ["."]